[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "petpropy"
version = "1.0.4"
license = {file = "LICENSE"}
authors = [
    {name = "Ever J. Ramos I."}
]
description = "Calculator package of physical properties of Gas, Oil, and Water in Python."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["petroleum", "chemical", "petroleum-engineering", "chemical-engineering", "oil-and-gas"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "pandas"
]

[project.urls]
"Homepage" = "https://github.com/EverJRamosI/petpropy"
"Bug Reports" = "https://github.com/EverJRamosI/petpropy/issues"
"Contact" = "https://www.linkedin.com/in/everjramosi/"